# Nebula

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  wscript
.cache/clangd/index/: Window.cpp.107ECD8DC4B9B4BC.idx  Window.cpp.DFF5BC81B409A2CF.idx  Window.h.02E8B1AFF9D8CFB6.idx  Window.h.4B1E1CF3C194B825.idx  _fixes.hpp.BAFE231A054E9B08.idx  _fixes.hpp.CE7257F6EDF34F8E.idx  (+456 more)
.github/workflows/: ci.yml
App/: CMakeLists.txt
App/include/: header.h
App/src/: main.cpp
Flappy_Bird/: CMakeLists.txt
Flappy_Bird/src/: main.cpp
Nebula/: CMakeLists.txt
Nebula/Application/: application.cpp  application.h  assetManager.cpp  asset_database.cpp  asset_id.cpp  builtinMeshes.cpp  builtinMeshes.h  builtin_assets.h  clock.cpp  collider_debug.cpp  collider_fit.cpp  component.cpp  component.h  debug_line_renderer.cpp  entityComponentJson.cpp  entityComponentJson_internal.h  environment_render.cpp  eventBus.cpp  fmod_audio_service.cpp  input.cpp  input.h  input_Actions.cpp  input_Actions.h  mesh_asset.cpp  mesh_import_options.cpp  mesh_import_options.h  mesh_importer.cpp  mesh_importer.h  mesh_upload.cpp  mesh_upload.h  nodeGraphRuntime.cpp  null_physics_world.cpp  physics_query_adapter.cpp  physics_query_adapter.h  physics_system.cpp  physx_physics_world.cpp  prefabOverrides.cpp  prefabSerializer.cpp  prefabService.cpp  registry.cpp  (+17 more)
Nebula/Application/physics/: collision_math.cpp
Nebula/Math/: camera2D.cpp  camera2D.h  camera3D.cpp  camera3D.h  transform2D.cpp  transform2D.h  transform3D.cpp  transform3D.h
Nebula/include/: Nebula.h  Window.cpp  Window.h  application.h  assetHandles.h  assetManager.h  assetProvider.h  asset_database.h  asset_id.h  audioService.h  camera3D.h  clock.h  collider_debug.h  collider_fit.h  component.h  component_registry.h  debug_line_renderer.h  entityComponentJson.h  environment.h  eventBus.h  eventTypes.h  frameCommands.h  graphicsContext.h  greet.h  imageDecoder.h  index_buffer.h  input.h  inputQuery.h  inputTypes.h  input_Actions.h  logSink.h  material.h  material_asset.h  math_types.h  mesh.h  mesh_asset.h  nodeGraph.h  physicsQuery.h  prefabInstance.h  prefabOverrides.h  (+24 more)
Nebula/include/ecs/: component_storage.h  entity.h  registry.h
Nebula/include/physics/: collision_math.h  collision_types.h  iphysics_world.h  physics_component.h  physics_system.h
Nebula/render_pipeline/interface/: index_buffer.cpp  index_buffer.h  openGL_RenderBackends.h  renderAPI.cpp  renderAPI.h  renderBackend.h  render_backend_factory.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
Nebula/render_pipeline/openGL/: openGL_IndexBuffer.cpp  openGL_IndexBuffer.h  openGL_Renderer.cpp  openGL_Renderer.h  openGL_Shader.cpp  openGL_Shader.h  openGL_VertexArray.cpp  openGL_VertexArray.h  openGL_VertexBuffer.cpp  openGL_VertexBuffer.h  openGL_factories.cpp  openGL_renderapiFactory.cpp  openGL_resource_factory.cpp  openGL_resource_factory.h  openGL_texture.cpp  openGL_texture.h
Nebula/render_pipeline/vulkan/: vulkan_renderapiFactory.cpp
Nebula/src/: Nebula.cpp  Window.cpp  assetProvider.cpp  greet.cpp  imageDecoder.cpp
Nebula/src/detail/: graphics_context_factory.cpp  graphics_context_factory.h  openGL_GraphicsContext.cpp  openGL_GraphicsContext.h  vulkan_GraphicsContext.cpp  vulkan_GraphicsContext.h  window_native.h
NebulaEditor/: CMakeLists.txt
NebulaEditor/src/: editorApplication.cpp  editorApplication.h  editorLog.cpp  editorLog.h  editorPlayMode.h  editorState.h  editorTemplate.cpp  editorTemplate.h  imGuiLayer.cpp  imGuiLayer.h  main.cpp
NebulaEditor/src/editor/: assetCatalog.cpp  assetCatalog.h  editorFlyCamera.cpp  editorFlyCamera.h  editorPicking.cpp  editorPicking.h
NebulaEditor/src/panels/: assetBrowserPanel.cpp  assetBrowserPanel.h  consolePanel.cpp  consolePanel.h  debugPanel.cpp  debugPanel.h  hierarchyPanel.cpp  hierarchyPanel.h  inspectorPanel.cpp  inspectorPanel.h  sceneViewPanel.cpp  sceneViewPanel.h
NebulaEditor/src/platform/: fileDialog.h  fileDialog_mac.mm  fileDialog_stub.cpp
NebulaEditor/src/qt/: qtEditorSession.h  qtGizmoTool.cpp  qtGizmoTool.h  qtGraphicsContext.cpp  qtGraphicsContext.h  qtMainWindow.cpp  qtMainWindow.h  qtNodeGraphPanel.cpp  qtNodeGraphPanel.h  qtSceneViewEmbed.cpp  qtSceneViewEmbed.h  qt_editor_main.cpp
NebulaEditor/src/render/: sceneViewFrameBuffer.cpp  sceneViewFrameBuffer.h
Nimbus/: CMakeLists.txt
Nimbus/src/: bouncePad_Script.cpp  bouncePad_Script.h  checkpoint_Script.cpp  checkpoint_Script.h  combat.cpp  combat.h  combatDirector.cpp  combatDirector.h  combatHelper.cpp  combatHelper.h  combatSpawn.cpp  combatSpawn.h  encounterDirector.cpp  encounterDirector.h  encounterState.h  enemy_Script.cpp  enemy_Script.h  goal_Script.cpp  goal_Script.h  ground_Script.h  main.cpp  mainCamera_Script.cpp  mainCamera_Script.h  nimbusRuntime.h  nimbus_config.h  nimbus_editor_main.cpp  playerController.cpp  playerController.h  player_Script.cpp  player_Script.h  register_Script.cpp  register_Script.h  sceneDefaults.cpp  sceneDefaults.h  traversal.cpp  traversal.h  traversalDirector.cpp  traversalDirector.h  traversalVolumes.cpp  traversalVolumes.h  (+4 more)
assets/audio/: README.md
assets/graphs/: objective_complete.json
assets/materials/: bounce_pad.mat  ground_cloud.mat  solid_cube.mat  solid_ground.mat  textured_spider.mat  wind_volume.mat
assets/meshes/: crate.mesh  ground_cloud.mesh  wind_volume.mesh
assets/prefabs/: bounce_pad.prefab  enemy.prefab  enemy_fast.prefab  platform.prefab  wind_volume.prefab
assets/scenes/: GATE_VERIFICATION.md  combat_arena.json  encounter_prefab_test.json  week2_scene.json
assets/shaders/: solid_color.frag  solid_color.vert  textured_color.frag  textured_color.vert
docs/: CLOUD_KINGDOM_PRIVATE_README.md  DEMO_CHECKLIST.md  Doxyfile.in  MIDDLEWARE_SETUP.md  README.md  architecture.md  overview.md  public_api.md  script_lifecycle.md  source_catalog.dox
scripts/: check_editor_deps.sh  check_include_layers.sh  check_nimbus_deps.sh
tests/: CMakeLists.txt  smoke_tests.cpp
